--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: 1.67.1</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220906-112921</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220914-151748</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -989,11 +989,10 @@
                                  <p>De putcode wordt samengesteld uit de drie letters die het type registratieobject aangeven
                                     (GMW), dan volgt het 2-cijferig nummer van het kaartblad waarop de locatie ligt gevolgd
                                     door de letter die het kaartbladonderdeel specificeert, en dan een 6-cijferig volgnummer.<br clear="none">
+                                    Het kaartbladnummer wordt bepaald op basis van de bij inname aangeleverde locatie.
                                     De gebruikte kaartbladindeling is die van de Topografische Kaart van Nederland 1:25.000,
                                     versie juni 2016. Eventuele toekomstige wijzigingen van de kaartbladindeling, zijn
                                     niet van toepassing op de wijze van afleiden van putcodes.<br clear="none">
-                                    De putcode wordt door de basisregistratie ondergrond gegenereerd, waarbij het kaartbladnummer
-                                    wordt bepaald op basis van de bij inname aangeleverde locatie.<br clear="none">
                                     Het volgnummer wordt als volgt opgebouwd. Wanneer de put geregistreerd was in de registratie
                                     DINO: de laatste vier cijfers van de NITG-code, voorafgegaan door twee voorloopnullen.
                                     Voor nieuwe putten: een 6-cijferig nummer, groter dan 100.000 om te onderscheiden
@@ -1187,7 +1186,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d62668e5077"></a><section id="detail_d62668e5077">
+                     </section><a class="anchor" id="detail_d64506e5324"></a><section id="detail_d64506e5324">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1225,7 +1224,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d62668e5244"></a><section id="detail_d62668e5244">
+                  </section><a class="anchor" id="detail_d64506e5509"></a><section id="detail_d64506e5509">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1262,7 +1261,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d62668e5411"></a><section id="detail_d62668e5411">
+                  </section><a class="anchor" id="detail_d64506e5694"></a><section id="detail_d64506e5694">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1300,7 +1299,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d62668e5578"></a><section id="detail_d62668e5578">
+                  </section><a class="anchor" id="detail_d64506e5879"></a><section id="detail_d64506e5879">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1337,7 +1336,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d62668e5745"></a><section id="detail_d62668e5745">
+                  </section><a class="anchor" id="detail_d64506e6064"></a><section id="detail_d64506e6064">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2210,7 +2209,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d62668e10792"></a><section id="detail_d62668e10792">
+                     </section><a class="anchor" id="detail_d64506e11273"></a><section id="detail_d64506e11273">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
