--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -965,11 +965,10 @@
                         <p>De putcode wordt samengesteld uit de drie letters die het type registratieobject aangeven
                            (GMW), dan volgt het 2-cijferig nummer van het kaartblad waarop de locatie ligt gevolgd
                            door de letter die het kaartbladonderdeel specificeert, en dan een 6-cijferig volgnummer.<br clear="none">
+                           Het kaartbladnummer wordt bepaald op basis van de bij inname aangeleverde locatie.
                            De gebruikte kaartbladindeling is die van de Topografische Kaart van Nederland 1:25.000,
                            versie juni 2016. Eventuele toekomstige wijzigingen van de kaartbladindeling, zijn
                            niet van toepassing op de wijze van afleiden van putcodes.<br clear="none">
-                           De putcode wordt door de basisregistratie ondergrond gegenereerd, waarbij het kaartbladnummer
-                           wordt bepaald op basis van de bij inname aangeleverde locatie.<br clear="none">
                            Het volgnummer wordt als volgt opgebouwd. Wanneer de put geregistreerd was in de registratie
                            DINO: de laatste vier cijfers van de NITG-code, voorafgegaan door twee voorloopnullen.
                            Voor nieuwe putten: een 6-cijferig nummer, groter dan 100.000 om te onderscheiden
@@ -1163,7 +1162,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d62668e5077"></a><section id="detail_d62668e5077">
+            </section><a class="anchor" id="detail_d64506e5324"></a><section id="detail_d64506e5324">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1201,7 +1200,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d62668e5244"></a><section id="detail_d62668e5244">
+         </section><a class="anchor" id="detail_d64506e5509"></a><section id="detail_d64506e5509">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1238,7 +1237,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d62668e5411"></a><section id="detail_d62668e5411">
+         </section><a class="anchor" id="detail_d64506e5694"></a><section id="detail_d64506e5694">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1276,7 +1275,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d62668e5578"></a><section id="detail_d62668e5578">
+         </section><a class="anchor" id="detail_d64506e5879"></a><section id="detail_d64506e5879">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1313,7 +1312,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d62668e5745"></a><section id="detail_d62668e5745">
+         </section><a class="anchor" id="detail_d64506e6064"></a><section id="detail_d64506e6064">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2186,7 +2185,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d62668e10792"></a><section id="detail_d62668e10792">
+            </section><a class="anchor" id="detail_d64506e11273"></a><section id="detail_d64506e11273">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
