--- a/data/Belangrijkste entiteiten.html
+++ b/data/Belangrijkste entiteiten.html
@@ -42,7 +42,7 @@
 		</section>
 		<section id="Putgeschiedenis">
 			<h4>Putgeschiedenis</h4>
-			<p>De putgeschiedenis geeft aan wanneer de put is ingericht, wanneer die is opgeruimd en welke gebeurtenissen er tussentijds hebben plaatsgevonden. Er zijn 13 gebeurtenissen geïdentificeerd die van belang zijn voor het registratieobject en dat zijn:</p>
+			<p>De putgeschiedenis geeft aan welke gebeurtenissen hebben plaatsgevonden tussen het inrichten en het opruimen van de put. Er zijn 13 tussentijdse gebeurtenissen geïdentificeerd die van belang zijn voor het registratieobject:</p>
 			<ol>
 				<li>Het eigendom van de put is op een andere organisatie overgegaan.</li>
 				<li>Het uitvoeren van het onderhoud van de put is op een andere organisatie overgegaan.</li>
