--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: 1.67.1</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20221011-150700</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20221011-151724</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -974,7 +974,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Opbouw</th>
-                              <td></td>
+                              <td>CCCNNCNNNNNN</td>
                            </tr>
                            <tr>
                               <th>Regels</th>
@@ -1187,7 +1187,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d64405e5305"></a><section id="detail_d64405e5305">
+                     </section><a class="anchor" id="detail_d64390e5303"></a><section id="detail_d64390e5303">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1225,7 +1225,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d64405e5490"></a><section id="detail_d64405e5490">
+                  </section><a class="anchor" id="detail_d64390e5488"></a><section id="detail_d64390e5488">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1262,7 +1262,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d64405e5675"></a><section id="detail_d64405e5675">
+                  </section><a class="anchor" id="detail_d64390e5673"></a><section id="detail_d64390e5673">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1300,7 +1300,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d64405e5860"></a><section id="detail_d64405e5860">
+                  </section><a class="anchor" id="detail_d64390e5858"></a><section id="detail_d64390e5858">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1337,7 +1337,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d64405e6045"></a><section id="detail_d64405e6045">
+                  </section><a class="anchor" id="detail_d64390e6043"></a><section id="detail_d64390e6043">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2210,7 +2210,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d64405e11254"></a><section id="detail_d64405e11254">
+                     </section><a class="anchor" id="detail_d64390e11252"></a><section id="detail_d64390e11252">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
