--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -950,7 +950,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Opbouw</th>
-                     <td></td>
+                     <td>CCCNNCNNNNNN</td>
                   </tr>
                   <tr>
                      <th>Regels</th>
@@ -1163,7 +1163,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d64405e5305"></a><section id="detail_d64405e5305">
+            </section><a class="anchor" id="detail_d64390e5303"></a><section id="detail_d64390e5303">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1201,7 +1201,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d64405e5490"></a><section id="detail_d64405e5490">
+         </section><a class="anchor" id="detail_d64390e5488"></a><section id="detail_d64390e5488">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1238,7 +1238,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d64405e5675"></a><section id="detail_d64405e5675">
+         </section><a class="anchor" id="detail_d64390e5673"></a><section id="detail_d64390e5673">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1276,7 +1276,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d64405e5860"></a><section id="detail_d64405e5860">
+         </section><a class="anchor" id="detail_d64390e5858"></a><section id="detail_d64390e5858">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1313,7 +1313,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d64405e6045"></a><section id="detail_d64405e6045">
+         </section><a class="anchor" id="detail_d64390e6043"></a><section id="detail_d64390e6043">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2186,7 +2186,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d64405e11254"></a><section id="detail_d64405e11254">
+            </section><a class="anchor" id="detail_d64390e11252"></a><section id="detail_d64390e11252">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
